# aidaTT

./: .gitignore  .travis.yml  BUILD.ME  CMakeLists.txt  README  README.md
.travis-ci.d/: compile_and_test.sh  init_x86_64.sh
cmake/: FindGSL.cmake  aidaTTConfig.cmake.in  aidaTT_default_cxx_flags.cmake
core/include/: AidaTT.hh  AidaTTGeometry.hh  IBField.hh  IFittingAlgorithm.hh  IGeometry.hh  IPropagation.hh  Vector3D.hh  Vector5.hh  Vector5_Eigen.hh  aidaTT-Units.hh  fiveByFiveMatrix.hh  fiveByFiveMatrix_Eigen.hh  trackParameterization.hh  trackParameterizationLCIO.hh  trackParameters.hh  trajectory.hh  trajectoryElement.hh
core/src/: Vector5.cc  fiveByFiveMatrix.cc  trackParameters.cc  trajectory.cc  trajectoryElement.cc
cpp/: BUILD.ME  CMakeLists.txt
cpp/cmake/: GlobalSVNRevision.cmake
cpp/core/include/: AidaTT.hh  IBField.hh  IFittingAlgorithm.hh  IGeometry.hh  IGeometryAPI.hh  IMaterial.hh  IMeasurementSurface.hh  IPropagation.hh  aidaTT.hh  trackParameters.hh  trajectory.hh  trajectoryElement.hh  ttHelpers.hh
cpp/core/src/: AidaTT.cc  aidaTT.cc  trackParameters.cc  trajectory.cc  trajectoryElement.cc
cpp/doc/: Doxyfile.in  TODO
cpp/doc/UML_planning/: iteration_01.dia  iteration_04b.dia  iteration_06-core.dia
cpp/doc/description/: description.tex
cpp/doc/requirements/: IMarlinTrk_full.dia  Makefile
cpp/examples/: CMakeLists.txt
cpp/examples/gbl_example/: gbl_example.cpp
cpp/examples/intersection_calculator/: intersection_calculator.cpp
cpp/examples/simple/: simpleton.cpp
cpp/fields/include/: ConstantSolenoidBField.hh
cpp/fittingAlgorithms/include/: GBLInterface.hh  api2gbl.h  simpleKalman.h
cpp/fittingAlgorithms/src/: GBLInterface.cc  api2gbl.cc
cpp/geometry/src/: DD4hepGeometry.cc
cpp/helpers/include/: Vector3D.hh  Vector5.hh  fiveByFiveMatrix.hh
cpp/helpers/src/: Vector5.cc  fiveByFiveMatrix.cc  intersections.cc  utilities.cc
cpp/propagations/include/: RungeKuttaPropagation.hh  analyticalPropagation.hh  simplifiedPropagation.hh
cpp/propagations/src/: analyticalPropagation.cc  simplifiedPropagation.cc
cpp/test/: aidaTT-unitTests.cpp
cpp/test/unitTests/: UnitTest.cc  UnitTest.hh  constantbfield.cc  matrixOps.cc  spacevectors.cc  tpsimple.cc  tpsimple.hh
doc/: Doxyfile.in  PLAN  ReleaseNotes.md
doc/UML_planning/: ISurface.dia  core_part-final.dia  firstSketch.dia  iteration_02.dia  iteration_03.dia  iteration_04-core.dia  iteration_04.dia  iteration_04b-core.dia  iteration_05-core.dia  iteration_06-core.dia  iteration_06.dia
doc/requirements/: IMarlinTrk_simplified.dia  basic_structure.dia  design_requirements.tex  most_simple_structure.dia  pdfify.sh  requirements.tex  trajectory_element.dia  trajectory_element_simple.dia
doc/tracking_geometry_requirements/: tracking_geometry_requirements.tex
examples/: CMakeLists.txt  README.EXAMPLES
examples/gbl_example/: ILDExSimu.slcio  gbl_example.cpp
examples/geometry_test/: geometry_test.cpp
examples/intersection_calculator/: intersection_calculator.cpp
examples/lcio_read_example/: lcio_read_example.cpp
examples/lcio_tracks/: lcio_debug_tracks.cpp  lcio_tracks.cpp
examples/material_effects/: check_materials.cpp  drawx0.C  material_effects.cpp  material_ntuples.cpp
fields/include/: ConstantSolenoidBField.hh
fittingAlgorithms/include/: GBLInterface.hh
fittingAlgorithms/src/: GBLInterface.cc
geometry/include/: DD4hepGeometry.hh
geometry/src/: DD4hepGeometry.cc
helpers/include/: Vector3D.hh  Vector5.hh  fitResults.hh  fiveByFiveMatrix.hh  helixGymnastics.hh  helixHelpers.hh  intersections.hh  utilities.hh
helpers/src/: Vector5.cc  fiveByFiveMatrix.cc  helixGymnastics.cc  helixHelpers.cc  intersections.cc  simpleFits.cc  utilities.cc
persistency/include/: LCIOPersistency.hh
persistency/src/: LCIOPersistency.cc
propagations/include/: analyticalPropagation.hh  simplifiedPropagation.hh
propagations/src/: analyticalPropagation.cc  simplifiedPropagation.cc
test/: CMakeLists.txt  aidaTT-unitTests.cpp
test/unitTests/: UnitTestSuite.cc  UnitTestSuite.hh  constantbfield.cc  constantbfield.hh  finalTrackTest.cc  finalTrackTest.hh  helixCalculations.cc  helixCalculations.hh  initialTrackTest.cc  initialTrackTest.hh  intersectionTest.cc  intersectionTest.hh  matrixOps.cc  matrixOps.hh  resultTest.cc  resultTest.hh  spacevectors.hh  tpsimple.cc  tpsimple.hh
util/include/: fitResults.hh  helixUtils.hh  intersections.hh  materialUtils.hh  simpleFits.hh  utilities.hh
util/src/: helixGymnastics.cc  helixUtils.cc  intersections.cc  materialUtils.cc  utilities.cc
